--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,20 +1,47 @@
-html, body, ul, li, ol, dl, dd, dt, p, h1, h2, h3, h4, h5, h6, form, fieldset, legend, img {
+html,
+body,
+ul,
+li,
+ol,
+dl,
+dd,
+dt,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+form,
+fieldset,
+legend,
+img {
     margin: 0;
     padding: 0;
 }
-body,html {
+
+body,
+html {
     width: 100%;
     height: 100%;
 }
-fieldset, img, input, button { 			/*fieldset组合表单中的相关元素*/
+
+fieldset,
+img,
+input,
+button {
+    /*fieldset组合表单中的相关元素*/
     border: none;
     padding: 0;
     margin: 0;
     outline-style: none;
 }
 
-ul, ol {
-    list-style: none;				/*清除列表风格*/
+ul,
+ol {
+    list-style: none;
+    /*清除列表风格*/
 }
 
 input {
@@ -23,11 +50,14 @@ input {
     font-family: "SimSun", "宋体";
 }
 
-select, input {
+select,
+input {
     vertical-align: middle;
 }
 
-select, input, textarea {
+select,
+input,
+textarea {
     font-size: 14px;
     margin: 0;
 }
@@ -36,25 +66,31 @@ textarea {
     resize: none;
 }
 
+
 /*防止多行文本框拖动*/
+
 img {
     border: 0;
     vertical-align: middle;
 }
 
+
 /*  去掉图片低测默认的3像素空白缝隙*/
+
 table {
-    border-collapse: collapse;			/*合并外边线*/
+    border-collapse: collapse;
+    /*合并外边线*/
 }
 
-
 body {
-    font: 14px/150% Arial, Verdana, "\5b8b\4f53";	/*宋体，Unicode，统一码*/
+    font: 14px/150% Arial, Verdana, "\5b8b\4f53";
+    /*宋体，Unicode，统一码*/
     color: #666;
     background: #fff
 }
 
-.clearfix:before, .clearfix:after {
+.clearfix:before,
+.clearfix:after {
     content: "";
     display: table;
 }
@@ -64,7 +100,8 @@ body {
 }
 
 .clearfix {
-    *zoom: 1; /*IE/7/6*/
+    *zoom: 1;
+    /*IE/7/6*/
 }
 
 a {
@@ -76,13 +113,20 @@ a:hover {
     color: #00B2EE;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     text-decoration: none;
     font-weight: normal;
     font-size: 100%;
 }
 
-s, i, em {
+s,
+i,
+em {
     font-style: normal;
     text-decoration: none;
 }
@@ -91,13 +135,15 @@ s, i, em {
     color: #00B2EE !important;
 }
 
+
 /*公共类*/
+
 .container {
     /*版心 提取 */
-    width: 1100	px;
+    width: 1000 px;
     margin: 0 auto;
 }
+
 .hide {
     display: none
 }
-
