--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,183 +1,252 @@
 /*header部分开始*/
+
 .btn-primary {
-	color: black;
-    background-color: #F5F5F5;
-    border-color: #F5F5F5;
-}
-.btn-primary:hover{
-	color:#00B2EE;
-    background-color: #F5F5F5;
-    border-color: #F5F5F5;
-}
-.btn-primary:focus, .btn-primary.focus {
     color: black;
     background-color: #F5F5F5;
     border-color: #F5F5F5;
-    }
+}
+
+.btn-primary:hover {
+    color: #00B2EE;
+    background-color: #F5F5F5;
+    border-color: #F5F5F5;
+}
+
+.btn-primary:focus,
+.btn-primary.focus {
+    color: black;
+    background-color: #F5F5F5;
+    border-color: #F5F5F5;
+}
+
 header {
-	width: 100%;
-	height: 34px;
-	background: #F5F5F5;
-	line-height: 30px;
+    width: 100%;
+    height: 34px;
+    background: #F5F5F5;
+    line-height: 30px;
 }
-header .left{
-	float:left;
+
+header .left {
+    float: left;
 }
+
 header .right {
-	float:right;
+    float: right;
 }
-header .right li  {
-	float:left;
-	list-style: none;
-	padding:0 10px;
-	color:#00B2EE;
+
+header .right li {
+    float: left;
+    list-style: none;
+    padding: 0 10px;
+    color: #00B2EE;
 }
 
 header .container li a {
-	color:black;
+    color: black;
 }
-header .container li a:hover {
-	text-decoration: none;
-	color:#00B2EE;
-}
-.btn-lg, .btn-group-lg > .btn {
-	font-size:14px;
-	height: 33px;
-	line-height: 12px;
-}
-/*header部分结束*/
-/*search部分开始*/
-.search .search-left {
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 50px;
-	font-weight: bold;
-	color: #00B2EE;
-	line-height: 58px;
-	margin-top: 5px;
-	margin:20px;
-	float:left;
-	position:absolute;
-}
-.search .search-center {
-	width: 500px;
-	overflow: hidden;
-	margin-left: 500px;
-	margin-top:30px;
-}
-.search .search-center input {
-	outline: none;
-	border:none;
-	border:1px solid #00B2EE;
-	width: 400px;
-	height: 40px;
-	border-radius:10px;
-	
-	
-}
-.search .search-center button {
-	background: #00B2EE;
-	border:1px solid #00B2EE;
-	height: 40px;
-	width: 50px;
-	border-radius:10px;
 
+header .container li a:hover {
+    text-decoration: none;
+    color: #00B2EE;
 }
+
+header nav .container- .btn-lg,
+.btn-group-lg>.btn {
+    font-size: 14px;
+    height: 33px;
+    line-height: 12px;
+}
+
+
+/*header部分结束*/
+
+
+/*search部分开始*/
+
+.search .search-left {
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: 50px;
+    font-weight: bold;
+    color: #00B2EE;
+    line-height: 58px;
+    margin-top: 5px;
+    margin: 20px;
+    float: left;
+    position: absolute;
+}
+
+.search .search-center {
+    width: 500px;
+    overflow: hidden;
+    margin-left: 500px;
+    margin-top: 30px;
+}
+
+.search .search-center input {
+    outline: none;
+    border: none;
+    border: 1px solid #00B2EE;
+    width: 400px;
+    height: 40px;
+    border-radius: 10px;
+}
+
+.search .search-center button {
+    background: #00B2EE;
+    border: 1px solid #00B2EE;
+    height: 40px;
+    width: 50px;
+    border-radius: 10px;
+}
+
 
 /*search部分结束*/
+
+
 /*main部分开始*/
+
 .main {
-	margin:0 auto;
-	margin-top:20px;
+    margin: 0 auto;
+    margin-top: 20px;
 }
+
 .main .main-left {
-
-	width: 200px;
-	background:	#F5F5F5;
-	float:left;
-	position: absolute;
-
+    width: 200px;
+    background: #F5F5F5;
+    float: left;
+    position: absolute;
 }
+
 .main .main-left ul li {
-	width: 200px;
-	height: 75px;
-	line-height:75px;
-	padding-left:10px;
+    width: 200px;
+    height: 75px;
+    line-height: 75px;
+    padding-left: 10px;
 }
+
 .main .main-left ul li a:hover {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 .main .main-right {
-	height: 450px;
-	overflow: hidden;
-    margin-left:220px;
-	background: red;
-
-	
-}
-.main .main-right li img {
-	
+    height: 450px;
+    overflow: hidden;
+    margin-left: 220px;
+    background: red;
 }
 
-.main-right .carousel-inner > .item > img, .carousel-inner > .item > a > img {
+.main .main-right li img {}
+
+.main-right .carousel-inner>.item>img,
+.carousel-inner>.item>a>img {
     width: 920px;
-	height: 450px;
+    height: 450px;
 }
-.main-right .carousel-inner > .item > img, .carousel-inner > .item h3 {
-	color:#00B2EE;
-	font-size: 26px;
+
+.main-right .carousel-inner>.item>img,
+.carousel-inner>.item h3 {
+    color: #00B2EE;
+    font-size: 26px;
 }
+
+
 /*main部分结束*/
+
+
 /*content部分开始*/
+
 .content .content-top {
-	border-bottom: 3px solid #00B2EE;
+    border-bottom: 3px solid #00B2EE;
 }
+
 .content .content-top h1 {
-	margin-top:20px;
-	font-size: 20px;
+    margin-top: 20px;
+    font-size: 20px;
 }
 
-.content .title dd{
-	border-bottom:1px solid #00B2EE;
-	height: 30px;
-	line-height: 30px;
+.content .title dd {
+    border-bottom: 1px solid #00B2EE;
+    height: 30px;
+    line-height: 30px;
 }
-.content .box	 {
-	/*margin:-2px;*/
-	display: inline-block;
-	padding:15px 0;
-	/*border-top:1px solid #F5F5F5;*/
-	border-bottom:1px solid #ccc;
+
+.content .box {
+    /*margin:-2px;*/
+    display: inline-block;
+    padding: 15px 0;
+    /*border-top:1px solid #F5F5F5;*/
+    border-bottom: 1px solid #ccc;
 }
+
 .content .box:hover {
-	background: #F5F5F5;
+    background: #F5F5F5;
 }
-.content a {
-	color:#00B2EE;
 
+.content a {
+    color: #00B2EE;
 }
+
 .list-content {
-	white-space: normal;
-	line-height: 21px;
-	padding:0 15px;
+    white-space: normal;
+    line-height: 21px;
+    padding: 0 15px;
 }
+
+
 /*content部分结束*/
+
+
 /*footer部分开始*/
+
 footer {
-	margin-top:10px;
-	width: 100%;
-	height: 300px;
-	background: #F5F5F5;
+    margin-top: 10px;
+    width: 100%;
+    height: 300px;
+    background: #F5F5F5;
 }
+
+
 /* CSS Document */
-.footernormal{ width:1000px; margin:0 auto;border-top:1px solid #0da1d8; overflow:hidden; clear:both;padding-top:5px;}
+
+.footernormal {
+    width: 1000px;
+    margin: 0 auto;
+    border-top: 1px solid #0da1d8;
+    overflow: hidden;
+    clear: both;
+    padding-top: 5px;
+}
+
 
 /* footer */
-.footer{margin:0 auto; width:1000px; padding:20px 0 15px; overflow:hidden; text-align:center; color:#666;}
-.bottom_nav a{ color:#444; padding-left:7px;}
-.bottom_nav a:hover{ color:#c00;}
-footer p {
-	margin:20px 0;
+
+.footer {
+    margin: 0 auto;
+    width: 1000px;
+    padding: 20px 0 15px;
+    overflow: hidden;
+    text-align: center;
+    color: #666;
 }
+
+.bottom_nav a {
+    color: #444;
+    padding-left: 7px;
+}
+
+.bottom_nav a:hover {
+    color: #c00;
+}
+
+footer p {
+    margin: 20px 0;
+}
+
+@media (min-width: 1200px) {
+    .container {
+        width: 1050px;
+    }
+}
+
 
 /*footer部分结束*/
