--- a/views/login.html
+++ b/views/login.html
@@ -2,47 +2,44 @@
 <html lang="zh-CN">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>登录</title>
-  <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="/public/css/login.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>登录</title>
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/public/css/login.css">
 </head>
 
 <body>
-  <div class="container">
-    <form class="form-signin" id="form">
-      <h2 class="form-signin-heading">Please sign in</h2>
-      <input type="email" name="email" class="form-control" placeholder="邮箱" required autofocus>
-      <input type="password" name="password" class="form-control" placeholder="密码" required>
-      <div class="checkbox">
-        <label>
+    <div class="container">
+        <form class="form-signin" id="form">
+            <h2 class="form-signin-heading">Please sign in</h2>
+            <input type="email" name="email" class="form-control" placeholder="邮箱" required autofocus>
+            <input type="password" name="password" class="form-control" placeholder="密码" required>
+            <div class="checkbox">
+                <label>
           <input type="checkbox" value="remember-me"> 记住我
         </label>
-      </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
-    </form>
-  </div>
-  <script src="/node_modules/jquery/dist/jquery.js"></script>
-  <script>
-    $('#form').on('submit', function (e) {
-      e.preventDefault()
-      $.ajax({
-        url: '/login',
-        type: 'post',
-        data: $(this).serialize(),
-        dataType: 'json'
-      }).then(function (data) {
-        var err_code = data.err_code;
-        if (err_code === 0) {
-          window.location.href = '/'
-        } else if (err_code === 2001) {
-          window.alert('登陆失败')
-        }
-      })
-    })
-  </script>
+            </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
+        </form>
+    </div>
+    <script src="/node_modules/jquery/dist/jquery.js"></script>
+    <script>
+        var remoteUrl = "http://192.168.1.8:3000";
+        $('#form').on('submit', function(e) {
+            e.preventDefault()
+            $.ajax({
+                url: remoteUrl + '/teacher/login',
+                type: 'post',
+                data: $(this).serialize(),
+                dataType: 'json'
+            }).then(function(data) {
+                consloe.log(data);
+                window.location.href = "/main";
+            })
+        })
+    </script>
 </body>
 
 </html>
