--- a/views/register.html
+++ b/views/register.html
@@ -36,8 +36,7 @@
                 data: $(this).serialize(),
                 dataType: 'json',
                 success: function(data) {
-                    alert(1);
-                    console.log(data);
+                    window.location.href = '/login'
                 },
                 error: function() {
                     console.log(1);
