--- a/views/main.html
+++ b/views/main.html
@@ -42,9 +42,15 @@
 
     </header>
     <!--header部分结束-->
-
     <!--search部分开始-->
+    <div class="search container">
+        <div class="search-left">同城家教</div>
+        <div class="search-center">
+            <input type="text">
+            <button>搜索</button>
+        </div>
 
+    </div>
     <!--search部分结束-->
     <!-- main部分开始 -->
     <div class="main container">
@@ -114,15 +120,15 @@
                     <dd class="col-lg-2 col-md-2 col-sm-2 col-xs-2">更新时间</dd>
                 </dl>
                 <dl class="box row">
-                    <dd class="col-lg-4 col-md-4 col-sm-4 col-xs-4"><a href="">招聘有经验的语文老师</a></dd>
-                    <dd class="col-lg-5 col-md-5 col-sm-5 col-xs-5"><a href="">南京名思堂教育信息咨询有限公司江阴分公司</a></dd>
+                    <dd class="col-lg-4 col-md-4 col-sm-4 col-xs-4"><a href="/detail">招聘有经验的语文老师</a></dd>
+                    <dd class="col-lg-5 col-md-5 col-sm-5 col-xs-5"><a href="/detail">南京名思堂教育信息咨询有限公司江阴分公司</a></dd>
                     <dd class="col-lg-1 col-md-1 col-sm-1 col-xs-1">江阴</dd>
                     <dd class="col-lg-2 col-md-2 col-sm-2 col-xs-2">03月30日</dd>
                     <dd class="col-lg-2 col-md-2 col-sm-2 col-xs-2">薪酬：面议</dd>
                     <dd class="col-lg-3 col-md-3 col-sm-3 col-xs-3">招聘人才：5人</dd>
                     <dd class="col-lg-4 col-md-4 col-sm-4 col-xs-4">公司地址：人民中路111号联合大厦901</dd>
                     <dd class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                        <a href="javascript:void(0);" onclick="applyWork(25997067);" class="jianli">详情</a></dd>
+                        <a href="/detail" onclick="applyWork(25997067);" class="jianli">详情</a></dd>
                     <dd class="list-content">
                         <p>岗位介绍： 1、负责语文日常的辅导工作和专业的​‌‌1对1教学，帮助学生克服学习难点，改掉不良学习习惯 岗位要求： 1、表达能力优秀，普通话标准，思维灵活，富有亲和力，有耐心，有责任心，有师德，擅长与学生进行沟通交流 2、有教师资格证者优先 3、有授课、辅导、
                         </p>
