--- a/views/detail.html
+++ b/views/detail.html
@@ -51,7 +51,7 @@
         <div class="main-content">
             <div class="detail-main">
                 <div style="text-align:center;margin-bottom:10px;">
-                    <script type="text/javascript" src="http://shop2008.liebiao.com/ut3a1dce92f0c8f33cdb14798aafed22e01beed40139eb30ed51322bda.js"></script>
+                    <script type="text/javascript" src="/public/js/detail.js"></script>
                 </div>
                 <div class="main-l">
                     <div class="detail-con" style="margin-top:0">
@@ -59,40 +59,14 @@
                             <div class="infoTitle-zp">
                                 <div class="title-time">
                                     <h1 class="detail-title">招聘有经验的语文老师</h1>
-                                    <div class="title-bot"><span class="tb-other">2017-03-30<!--&nbsp;&nbsp;&nbsp;&nbsp;浏览<span id="post_visitors"></span>次--></span>
-                                        <div style="float:right;">
-                                            <div class="div_favor">
-                                                <span id="span_favor"><i id="span_favor_i" class="span_favor"></i><a href="" id="span_favor_a" rel="nofollow">收藏</a></span>
-                                            </div>
-                                            <div class="manage"><span class="manage-span"><i class="manage-ico"></i>管理信息</span>
-                                                <!-- guanli start -->
-                                                <div class="manage-div">
-                                                    <ul>
-                                                        <li><a id="xiugai" href="http://wuxi.zhaopin.liebiao.com/cgi-bin/useractions.php?act=edit&p=324916914" rel="nofollow">修改</a></li>
-                                                        <li><a id="shanchu" href="http://wuxi.zhaopin.liebiao.com/cgi-bin/useractions.php?act=delete&p=324916914" rel="nofollow">删除</a></li>
-                                                        <li><a id="shuaxin" href="http://wuxi.zhaopin.liebiao.com/cgi-bin/useractions.php?act=refresh&p=324916914" rel="nofollow">刷新</a></li>
-                                                        <li><a id="yuyueshuaxin" href="http://wuxi.zhaopin.liebiao.com/cgi-bin/useractions.php?act=yuyueshuaxin&p=324916914" rel="nofollow">预约刷新</a></li>
-                                                        <!--<li><a id="zhiding" href="http://wuxi.zhaopin.liebiao.com/cgi-bin/useractions.php?act=settop&p=324916914" rel="nofollow">置顶</a></li>-->
-                                                        <li><a id="tuiguang" href="http://wuxi.zhaopin.liebiao.com/cgi-bin/useractions.php?act=tuiguang&p=324916914" rel="nofollow">定向推广</a></li>
-                                                    </ul>
-                                                </div>
-                                                <!-- guanli start -->
-                                            </div>
-                                            <div class="tousu_left"><i class="tousu-ico"></i><span id="tousu" style="cursor:pointer" href="http://www.liebiao.com/cgi-bin/jubao.php?p=324916914">投诉</span></div>
-                                            <!-- Baidu Button BEGIN -->
-                                            <div id="bdshare" class="bdshare_t bds_tools get-codes-bdshare">
-                                                <i class="share-ico"></i>
-                                                <span class="bds_more" style="background-image:none !important;padding:0;">分享</span>
-                                            </div>
-                                            <!-- Baidu Button END -->
+                                    <div class="title-bot"><span class="tb-other">2017-03-30</span>
 
-                                        </div>
                                     </div>
                                 </div>
                                 <div class="companyInfo-zp">
-                                    <span class="companyName"><a href="http://zhaopin.liebiao.com/company3538066/" target="_blank">南京名思堂教育信息咨询有限公司江阴分公司</a></span>
+                                    <span class="companyName"><a href="#" target="_blank">南京名思堂教育信息咨询有限公司江阴分公司</a></span>
 
-                                    <span class="companyIcon"><span class="nozhizhao_rz" style="margin-left:5px;" title="营业执照未认证"></span>&nbsp; 营业执照未认证
+                                    <span class="companyIcon"><span class="nozhizhao_rz" style="margin-left:5px;" title="营业执照未认证"></span>
                                     </span>
 
                                 </div>
@@ -123,28 +97,11 @@
                                         </ul>
                                     </dd>
                                     <dd>
-                                        联系方式：<span class="tel-img" id="phone_1"><img src="http://wuxi.liebiao.com/article/phone/?type=zp&p=5pMc8sBkHKcAHn2uLnNi83dqLsCkLsCq"></span><span id="notice_1">[<a href="javascript:void(0);" id="chakan_1" class="chakan" onclick="chakanPhone(324916914, 1, 'wuxi');">查看</a>]</span>
+                                        联系方式：2394359569
                                     </dd>
                                 </dl>
-                                <dl class="fr">
-                                    <script type="text/javascript" src="http://shop2008.liebiao.com/on3a1ecf91feccff30db14798aafed22e01beed40139eb30ed51322bda.js"></script>
-                                </dl>
+
                             </div>
-
-
-                            <div class="welfare-zp">
-                                <div class="welfareLr">
-                                    <div class="fl">&nbsp;</div>
-                                    <div class="fl-con">
-                                        <span class="jq">五险一金</span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div style="margin-left: -22px;">
-                                <script type="text/javascript" src="http://shop2008.liebiao.com/cm3a1ec492f3ccf13adb14798aafed22e01beed40139eb30ed51322bda.js"></script>
-                            </div>
-
                             <div class="applyJob">
                                 <a class="sq-submiter" href="javascript:void(0);" onclick="applyWork(25997067);">立即申请</a>
                             </div>
@@ -152,7 +109,6 @@
                             <div class="about-zp">
                                 <ul class='about-dh'>
                                     <li class="current">职位描述</li>
-                                    <li>公司介绍</li>
                                     <!--<li>公司其他职位</li>-->
                                 </ul>
                                 <div class="about-lr">
@@ -166,35 +122,86 @@
                                         </div>
                                         <div class="contact-zp">
                                             <dl>
-                                                <dt>联系方式</dt>
-                                                <dd>联系电话：<span class="tel-img" id="phone_2"><img src="http://wuxi.liebiao.com/article/phone/?type=zp&p=5pMc8sBkHKcAHn2uLnNi83dqLsCkLsCq"></span><span id="notice_2">[<a href="javascript:void(0);" onclick="chakanPhone(324916914, 2, 'wuxi');" id="chakan_2" class="chakan">查看</a>]</span></dd>
-
+                                                <dt>联系方式:2234556</dt>
                                                 <dd>联系人：王老师</dd>
                                                 <dd>联系地址：无锡江阴江阴城中城东城南城北都有校区</dd>
                                                 <dd>邮箱：827656492@qq.com</dd>
                                             </dl>
                                         </div>
                                     </div>
-                                    <div class="hide">
-                                        <div>名思教育集团成立于2003年，是一家专门从事中小学生课外辅导的大型教育机构，拥有科学的教育体系、优秀的教师队伍和先进的管理团队，从早期的教育软件开发、“一对多”辅导发展到今天“优秀教师一对一”个性化辅导。名思教育在全国拥有100多个个性化学习中心，目前已经在南京、合肥、无锡、常州、南通、芜湖、马鞍山、江阴、宜兴、镇江、张家港、嘉兴、桐乡、湖州、绍兴等40多个城市设立学习中心。名思教育坚持请最有实力的教师，运用最先进的教育理念，最科学的教育模式竭诚为中小学生提供优质的教育服务。</div>
-                                        <div class="contact-zp">
-                                            <dl>
-                                                <dt>联系方式</dt>
-                                                <dd>联系电话：<span class="tel-img" id="phone_2"><img src="http://wuxi.liebiao.com/article/phone/?type=zp&p=5pMc8sBkHKcAHn2uLnNi83dqLsCkLsCq"></span><span id="notice_2">[<a href="javascript:void(0);" onclick="chakanPhone(324916914, 2, 'wuxi');" id="chakan_2" class="chakan">查看</a>]</span></dd>
 
-                                                <dd>联系人：王老师</dd>
-                                                <dd>联系地址：无锡江阴江阴城中城东城南城北都有校区</dd>
-                                                <dd>邮箱：827656492@qq.com</dd>
-                                            </dl>
-                                        </div>
-                                    </div>
 
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div id="right_noborder" class="foot_info container">
+            <p class="right_channel">中国家教人才招聘频道介绍：欢迎您访问中国人才网的 . 中国 . 家教 .招聘频道。中国招聘频道免费为中国家教的人才和招聘单位提供家教招聘信息查询和发布服务，是寻找和发布中国家教人才求职和招聘信息的最佳专业的人才网站。欢迎提出宝贵的意见。最新中国家教人才招聘信息：1.招聘有经验的语文老师2.6000急聘会英语住家家教和早教师3.招聘初高中各科兼职老师4.高新诚聘辅导教师5.招聘围棋象棋兼职老师 移动终端请访问<a href="http://m.liebiao.com/_zhaopin/jiajiaolaoshi/">家教招聘</a>移动版</p>
+        </div>
+        <div style="height:5px;"></div>
 
+
+        <div id="quick_area" class="zimuzuhe-bottom active container">
+            <ul class="zimuzuhe">
+            </ul>
+            <div class="zimuzuhe-con f12">
+            </div>
+        </div>
+
+
+
+        <p class="container">
+            <strong class="b-title">中国家教招聘相关分类：</strong>
+
+            <a href="http://zhaopin.liebiao.com/jiaoshi/">教师/助教招聘</a>
+            <a href="http://zhaopin.liebiao.com/jiajiaolaoshi/">家教招聘</a>
+            <a href="http://zhaopin.liebiao.com/youerjiaoshi/">幼教招聘</a>
+            <a href="http://zhaopin.liebiao.com/jiangshi/">培训师/讲师招聘</a>
+            <a href="http://zhaopin.liebiao.com/zhujiao/">培训策划招聘</a>
+            <a href="http://zhaopin.liebiao.com/peixunzhuli/">培训助理招聘</a>
+            <a href="http://zhaopin.liebiao.com/jiaowurenyuan/">教学/教务管理招聘</a>
+            <a href="http://zhaopin.liebiao.com/jiaoyukaifa/">教育产品开发招聘</a>
+            <a href="http://zhaopin.liebiao.com/jykeyuanrenyuan/">学术研究/科研招聘</a>
+            <a href="http://zhaopin.liebiao.com/jyzhaosheng/">招生/课程顾问招聘</a>
+            <a href="http://zhaopin.liebiao.com/xiaozhang/">校长招聘</a>
+
+        </p>
+        <p class="container">
+            <strong class="b-title">热点城市家教招聘分类：</strong>
+            <a href="http://beijing.zhaopin.liebiao.com/jiajiaolaoshi/">北京家教招聘</a><a href="http://shanghai.zhaopin.liebiao.com/jiajiaolaoshi/">上海家教招聘</a><a href="http://guangzhou.zhaopin.liebiao.com/jiajiaolaoshi/">广州家教招聘</a><a href="http://suzhou.zhaopin.liebiao.com/jiajiaolaoshi/">苏州家教招聘</a>
+            <a href="http://shenzhen.zhaopin.liebiao.com/jiajiaolaoshi/">深圳家教招聘</a><a href="http://tianjin.zhaopin.liebiao.com/jiajiaolaoshi/">天津家教招聘</a><a href="http://chongqing.zhaopin.liebiao.com/jiajiaolaoshi/">重庆家教招聘</a><a href="http://hangzhou.zhaopin.liebiao.com/jiajiaolaoshi/">杭州家教招聘</a>
+            <a href="http://wuxi.zhaopin.liebiao.com/jiajiaolaoshi/">无锡家教招聘</a>
+            <a href="http://jinan.zhaopin.liebiao.com/jiajiaolaoshi/">济南家教招聘</a><a href="http://chengdu.zhaopin.liebiao.com/jiajiaolaoshi/">成都家教招聘</a><a href="http://qingdao.zhaopin.liebiao.com/jiajiaolaoshi/">青岛家教招聘</a><a href="http://ningbo.zhaopin.liebiao.com/jiajiaolaoshi/">宁波家教招聘</a>
+            <a href="http://shenyang.zhaopin.liebiao.com/jiajiaolaoshi/">沈阳家教招聘</a>
+            <a href="http://wuhan.zhaopin.liebiao.com/jiajiaolaoshi/">武汉家教招聘</a><a href="http://nanjing.zhaopin.liebiao.com/jiajiaolaoshi/">南京家教招聘</a><a href="http://dalian.zhaopin.liebiao.com/jiajiaolaoshi/">大连家教招聘</a><a href="http://haerbin.zhaopin.liebiao.com/jiajiaolaoshi/">哈尔滨家教招聘</a>
+            <a href="http://foshan.zhaopin.liebiao.com/jiajiaolaoshi/">佛山家教招聘</a>
+            <a href="http://yantai.zhaopin.liebiao.com/jiajiaolaoshi/">烟台家教招聘</a>
+        </p>
+
+
+        <div class="bottom-bg">
+            <div class="footer">
+                <div class="bottom_nav">
+                    <a href="http://about.liebiao.com" target="_blank" rel="nofollow">关于列表网</a>
+                    <a href="http://tg.liebiao.com" target="_blank" rel="nofollow">我要推广</a>
+                    <a href="/cgi-bin/del_post_menu.php" target="_blank" rel="nofollow">我要删除信息</a>
+                    <a href="http://help.liebiao.com" target="_blank" rel="nofollow">帮助中心</a>
+                    <a href="http://about.liebiao.com/jobs.html" target="_blank" rel="nofollow">招贤纳士</a>
+                    <a href="http://about.liebiao.com/contact.html" target="_blank" rel="nofollow">联系我们</a>
+                </div>
+                <div>&copy;2017 列表网&nbsp;琼ICP备14000502号-12&nbsp;<a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=46010602000129" rel="nofollow" style="color: #888888;" target="_blank">琼公网安备46010602000129</a></div>
+            </div>
+        </div>
+
+
+
+
+    </footer>
 
 </body>
 
