--- a/views/register.html
+++ b/views/register.html
@@ -17,6 +17,11 @@
             <input name="email" type="email" class="form-control" placeholder="邮箱" required autofocus>
             <input name="password" type="password" class="form-control" placeholder="密码" required>
             <input name="username" type="text" id="inputPassword" class="form-control" placeholder="昵称" required>
+            <select name="type" id="">
+                <option value="1">应聘者</option>
+                <option value="2">公司招聘者</option>
+                <option value="3">管理员</option>
+            </select>
             <div class="checkbox">
                 <label>
           <input type="checkbox" value="remember-me"> 记住我
