--- a/views/detail.html
+++ b/views/detail.html
@@ -27,7 +27,7 @@
                     <ul class="nav navbar-nav navbar-right">
 
                         <form class="navbar-form navbar-left">
-                            <a href="/login" class="btn ">登陆</a>
+                            <a href="/login" class="btn ">登录</a>
                             <a href="/register" class="btn ">注册</a>
                         </form>
 
