--- a/views/administrator/company.html
+++ b/views/administrator/company.html
@@ -77,7 +77,7 @@
                     <li><a href="javascript:;">应聘者列表</a></li>
                 </ol>
                 <div class="page-title">
-                    <a href="/add" class="btn btn-success btn-sm pull-right">添加讲师</a>
+                    <a href="/company_add" class="btn btn-success btn-sm pull-right">添加讲师</a>
                 </div>
                 <div class="panel panel-default">
                     <table class="table table-striped table-bordered table-hover">
