--- a/views/require.html
+++ b/views/require.html
@@ -29,34 +29,16 @@
                         <li class="name cate-list">
                             <b class="must-Symbol">*</b>
                             <span class="com-title">公司名称</span>
-                            <input type="text" data-required data-description='tcName' data-describedby='tcNameInfo' class="com-input" id="txtUserName" name="truename" value="">
+                            <input type="text" data-required data-description='tcName' data-describedby='tcNameInfo' class="com-input" id="txtUserName" name="username" value="">
                             <div id="tcNameInfo" class="ErrorInfo"></div>
                         </li>
                         <li class="birthday cate-list">
                             <b class="must-Symbol">*</b>
                             <span class="com-title">发布日期</span>
                             <div class="com-select selects clear">
-                                <input type="text" data-required data-description='dateBir' data-describedby='dateBirInfo' class="dateBir" name="truename" data-date-language='zh-CN' data-provide='datepicker' data-date-end-date='0d' data-date-format='yyyy-mm-dd'>
+                                <input type="text" data-required data-description='dateBir' data-describedby='dateBirInfo' class="dateBir" name="releaseDate" data-date-language='zh-CN' data-provide='datepicker' data-date-end-date='0d' data-date-format='yyyy-mm-dd'>
                             </div>
                             <div id="dateBirInfo" class="ErrorInfo"></div>
-                        </li>
-                        <li class="name cate-list">
-                            <b class="must-Symbol">*</b>
-                            <span class="com-title">公司性质</span>
-                            <input type="text" data-required data-description='tcName' data-describedby='tcNameInfo' class="com-input" id="txtUserName" name="truename" value="">
-                            <div id="tcNameInfo" class="ErrorInfo"></div>
-                        </li>
-                        <li class="name cate-list">
-                            <b class="must-Symbol">*</b>
-                            <span class="com-title">公司名称</span>
-                            <input type="text" data-required data-description='tcName' data-describedby='tcNameInfo' class="com-input" id="txtUserName" name="truename" value="">
-                            <div id="tcNameInfo" class="ErrorInfo"></div>
-                        </li>
-                        <li class="name cate-list">
-                            <b class="must-Symbol">*</b>
-                            <span class="com-title">公司规模</span>
-                            <input type="text" data-required data-description='tcName' data-describedby='tcNameInfo' class="com-input" id="txtUserName" name="truename" value="">
-                            <div id="tcNameInfo" class="ErrorInfo"></div>
                         </li>
                         <li class="workTime cate-list">
                             <b class="must-Symbol">*</b>
@@ -68,13 +50,13 @@
                                 </div>
                                 <div class="select-list" id="jobTime">
                                     <ul>
-                                        <li><a href="javascript:void(0);" class="select-option" value='0' value=''>专科</a></li>
-                                        <li><a href="javascript:void(0);" class="select-option" value='5'> 本科</a></li>
-                                        <li><a href="javascript:void(0);" class="select-option" value='6'>研究生</a></li>
-                                        <li><a href="javascript:void(0);" class="select-option" value='1'>无要求</a></li>
+                                        <li><a href="javascript:void(0);" class="select-option" value='专科'>专科</a></li>
+                                        <li><a href="javascript:void(0);" class="select-option" value='本科'> 本科</a></li>
+                                        <li><a href="javascript:void(0);" class="select-option" value='研究生'>研究生</a></li>
+                                        <li><a href="javascript:void(0);" class="select-option" value='无要求'>无要求</a></li>
                                     </ul>
                                 </div>
-                                <input type="hidden" class="key" name="workyears" id="txtWorkYears" value="">
+                                <input type="hidden" class="key" name="education" id="txtWorkYears" value="">
                             </div>
                         </li>
                         <li class="salary cate-list">
@@ -86,32 +68,24 @@
                                 </div>
                                 <div class="select-list" id="salary">
                                     <ul>
-                                        <li><a href="javascript:void(0);" class="select-option" value='0'>面议</a></li>
-                                        <li><a href="javascript:void(0);" class="select-option" value='1'>1000元以下</a></li>
-                                        <li><a href="javascript:void(0);" class="select-option" value='2'>1000-2000元</a></li>
-                                        <li><a href="javascript:void(0);" class="select-option" value='3'>2000-3000元</a></li>
-                                        <li><a href="javascript:void(0);" class="select-option" value='4'>3000-5000元</a></li>
-                                        <li><a href="javascript:void(0);" class="select-option" value='5'>5000-8000元</a></li>
-                                        <li><a href="javascript:void(0);" class="select-option" value='6'>8000-12000元</a></li>
-                                        <li><a href="javascript:void(0);" class="select-option" value='7'>12000-20000元</a></li>
-                                        <li><a href="javascript:void(0);" class="select-option" value='8'>20000-25000元</a></li>
-                                        <li><a href="javascript:void(0);" class="select-option" value='9'>25000元以上</a></li>
+                                        <li><a href="javascript:void(0);" class="select-option" value='面议'>面议</a></li>
+                                        <li><a href="javascript:void(0);" class="select-option" value='1000元以下'>1000元以下</a></li>
+                                        <li><a href="javascript:void(0);" class="select-option" value='1000-2000元'>1000-2000元</a></li>
+                                        <li><a href="javascript:void(0);" class="select-option" value='2000-3000元'>2000-3000元</a></li>
+                                        <li><a href="javascript:void(0);" class="select-option" value='3000-5000元'>3000-5000元</a></li>
+                                        <li><a href="javascript:void(0);" class="select-option" value='5000-8000元'>5000-8000元</a></li>
+                                        <li><a href="javascript:void(0);" class="select-option" value='8000-12000元'>8000-12000元</a></li>
+                                        <li><a href="javascript:void(0);" class="select-option" value='12000-20000元'>12000-20000元</a></li>
+                                        <li><a href="javascript:void(0);" class="select-option" value='20000-25000元'>20000-25000元</a></li>
+                                        <li><a href="javascript:void(0);" class="select-option" value='25000元以上'>25000元以上</a></li>
                                     </ul>
                                 </div>
-                                <input type="hidden" class="key" id="txtSalary" name="salary">
+                                <input type="hidden" class="key" id="txtSalary" name="salary" value=111.22>
                             </div>
-                            <li id="authTel" class="tel cate-list" style="display:none">
-                                <b class="must-Symbol">*</b>
-                                <span class="com-title">手机号码</span>
-                                <b class="mobile-text"></b>
-                                <span class="auth-text green-font">已认证</span>
-                                <i class="success-icon icon"></i>
-                                <a href="javascript:;" class="changeTel" id="changeTel">更换号码</a>
-                            </li>
                             <li id="notAuthTel" class="tel cate-list">
                                 <b class="must-Symbol">*</b>
                                 <span class="com-title">联系方式</span>
-                                <input type="text" data-required data-description='tel' data-describedby='telInfo' class="com-input" maxlength="11" name="usermobile" id="txtMobile" value="">
+                                <input type="text" data-required data-description='tel' data-describedby='telInfo' class="com-input" maxlength="11" name="phone" id="txtMobile" value="">
                                 <div id="telInfo" class="ErrorInfo"></div>
                             </li>
                     </ul>
@@ -129,14 +103,14 @@
                         <li class="self cate-list">
                             <span class="com-title">岗位介绍</span>
                             <div class="self-wrap">
-                                <textarea class="self-content" id="txtIntrodSelf" maxlength="500"></textarea>
+                                <textarea class="self-content" id="txtIntrodSelf" maxlength="500" name="positionInfo"></textarea>
                                 <p class="hint-tips">还可以输入<span class="orange-font" id="totalNum">500</span>个字</p>
                             </div>
                         </li>
                         <li class="self cate-list">
                             <span class="com-title">公司介绍</span>
                             <div class="self-wrap">
-                                <textarea class="self-content" id="txtIntrodSelf" maxlength="500"></textarea>
+                                <textarea class="self-content" id="txtIntrodSelf" maxlength="500" name="companyInfo"></textarea>
                                 <p class="hint-tips">还可以输入<span class="orange-font" id="totalNum">500</span>个字</p>
                             </div>
                         </li>
@@ -154,7 +128,7 @@
     <script src="/public/assets/bootstrap/js/bootstrap.js"></script>
     <script src="/public/assets/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
     <script src="/public/assets/bootstrap-datepicker/locales/bootstrap-datepicker.zh-CN.min.js"></script>
-    <script src="/public/js/resume.js"></script>
+    <script src="/public/js/require.js"></script>
 </body>
 
 </html>
