--- a/views/detail.html
+++ b/views/detail.html
@@ -71,7 +71,7 @@
 
                                 </div>
                                 <div class="companyOther">
-                                    <span>公司行业：<a href="/hangye32.html" target="_blank">教育/科研/培训</a></span>
+                                    <span>公司行业：教育/科研/培训</a></span>
                                     <span>公司性质：私营</span>
                                     <span>公司规模：1-49人</span>
                                 </div>
@@ -82,7 +82,6 @@
                                     <dt>
                                     <ul>
                                         <li>薪资待遇：面议</li>
-                                        <li>职位类别：<a href="/jiajiaolaoshi/" target="_blank">家教</a></li>
                                     </ul>
                                 </dt>
                                     <dd>
